deploy.yml
---
apiVersion: v1
kind: Service
metadata:
  name: abc-service
  namespace: dev02
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: abc-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abc-service
  namespace: dev02
spec:
  replicas: 2
  selector:
    matchLabels:
      app: abc-service
  template:
    metadata:
      labels:
        app: abc-service
    spec:
      containers:
      - name: abc-service
        image: 123445567888993.dkr.ecr.us-west-2.amazonaws.com/abc-bootstrap:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: abc-service
  namespace: dev02
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/success-codes: "200,404"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: abc-service
          servicePort: 80
